[gd_scene load_steps=3 format=3 uid="uid://bmapeditor"]

[ext_resource type="Script" path="res://map_editor.gd" id="1_script"]
[ext_resource type="Script" path="res://grid_display.gd" id="2_script"]

[node name="MapEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Toolbar" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ToolCanyon" type="Button" parent="MarginContainer/VBox/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Canyon (towers)"

[node name="ToolValley" type="Button" parent="MarginContainer/VBox/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Valley (path)"

[node name="ToolSpawn" type="Button" parent="MarginContainer/VBox/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Set Spawn"

[node name="ToolGoal" type="Button" parent="MarginContainer/VBox/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Set Goal"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/Toolbar"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BtnNew" type="Button" parent="MarginContainer/VBox/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "New Map"

[node name="BtnLoad" type="Button" parent="MarginContainer/VBox/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="BtnSave" type="Button" parent="MarginContainer/VBox/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="BtnPlay" type="Button" parent="MarginContainer/VBox/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Save & Play"

[node name="GridPanel" type="Panel" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridDisplay" type="Control" parent="MarginContainer/VBox/GridPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("2_script")

[node name="StatusLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Map Editor"

[node name="BackBtn" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Back to Menu"
